# near-time-nft

./: .gitignore
contract-rs/: Cargo.toml  build.sh
contract-rs/src/: internal.rs  lib.rs  mint.rs  nft_core.rs
frontend/: package.json
frontend/src/: App.js
